RESOLVED FIXED 260611
[WGSL] ParameterizedTypeName should not parse the base
https://bugs.webkit.org/show_bug.cgi?id=260611
Summary [WGSL] ParameterizedTypeName should not parse the base
Tadeu Zagallo
Reported 2023-08-23 06:56:03 PDT
...
Attachments
Radar WebKit Bug Importer
Comment 1 2023-08-23 06:56:16 PDT
Tadeu Zagallo
Comment 2 2023-08-23 07:00:09 PDT
EWS
Comment 3 2023-08-28 02:31:05 PDT
Committed 267348@main (4c7e11d0ab28): <https://commits.webkit.org/267348@main> Reviewed commits have been landed. Closing PR #16973 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.