Source/WebGPU/WGSL/Parser.cpp
@@ -569,12 +569,11 @@ Result<AST::TypeName::Ref> Parser<Lexer>::parseTypeName()
 template<typename Lexer>
 Result<AST::TypeName::Ref> Parser<Lexer>::parseTypeNameAfterIdentifier(AST::Identifier&& name, SourcePosition _startOfElementPosition) // NOLINT
 {
-    auto kind = AST::ParameterizedTypeName::stringViewToKind(name.id());
-    if (kind && current().type == TokenType::Lt) {
+    if (current().type == TokenType::Lt) {
         CONSUME_TYPE(Lt);
         PARSE(elementType, TypeName);
         CONSUME_TYPE(Gt);
-        RETURN_ARENA_NODE(ParameterizedTypeName, *kind, WTFMove(elementType));
+        RETURN_ARENA_NODE(ParameterizedTypeName, WTFMove(name), WTFMove(elementType));
     }
     RETURN_ARENA_NODE(NamedTypeName, WTFMove(name));
 }
@@ -1257,8 +1256,7 @@ Result<AST::Expression::Ref> Parser<Lexer>::parsePrimaryExpression()
         // use of < as either the less-than operator or the beginning of a
         // template-parameter list. Here we are checking for vector or matrix
         // type names. Alternatively, those names could be turned into keywords
-        auto typePrefix = AST::ParameterizedTypeName::stringViewToKind(ident.id());
-        if ((typePrefix && current().type == TokenType::Lt) || current().type == TokenType::ParenLeft) {
+        if (current().type == TokenType::Lt || current().type == TokenType::ParenLeft) {
             PARSE(type, TypeNameAfterIdentifier, WTFMove(ident), _startOfElementPosition);
             PARSE(arguments, ArgumentExpressionList);
             RETURN_ARENA_NODE(CallExpression, WTFMove(type), WTFMove(arguments));
