Source/WebGPU/WGSL/TypeCheck.cpp
@@ -124,11 +124,15 @@ private:
 
     const Type* infer(AST::Expression&);
     const Type* resolve(AST::TypeName&);
+    const Type* lookupType(const AST::Identifier&);
     void inferred(const Type*);
     bool unify(const Type*, const Type*) WARN_UNUSED_RETURN;
     bool isBottom(const Type*) const;
     void introduceType(const AST::Identifier&, const Type*);
     void introduceValue(const AST::Identifier&, const Type*);
+
+    template<typename TargetConstructor, typename... Arguments>
+    void allocateSimpleConstructor(ASCIILiteral, TargetConstructor, Arguments&&...);
 
     template<typename CallArguments>
     const Type* chooseOverload(const char*, const SourceSpan&, const String&, CallArguments&& valueArguments, const Vector<const Type*>& typeArguments);
@@ -152,6 +156,31 @@ TypeChecker::TypeChecker(ShaderModule& shaderModule)
     introduceType(AST::Identifier::make("f32"_s), m_types.f32Type());
     introduceType(AST::Identifier::make("sampler"_s), m_types.samplerType());
     introduceType(AST::Identifier::make("texture_external"_s), m_types.textureExternalType());
+
+    allocateSimpleConstructor("vec2"_s, &TypeStore::vectorType, 2);
+    allocateSimpleConstructor("vec3"_s, &TypeStore::vectorType, 3);
+    allocateSimpleConstructor("vec4"_s, &TypeStore::vectorType, 4);
+    allocateSimpleConstructor("mat2x2"_s, &TypeStore::matrixType, 2, 2);
+    allocateSimpleConstructor("mat2x3"_s, &TypeStore::matrixType, 2, 3);
+    allocateSimpleConstructor("mat2x4"_s, &TypeStore::matrixType, 2, 4);
+    allocateSimpleConstructor("mat3x2"_s, &TypeStore::matrixType, 3, 2);
+    allocateSimpleConstructor("mat3x3"_s, &TypeStore::matrixType, 3, 3);
+    allocateSimpleConstructor("mat3x4"_s, &TypeStore::matrixType, 3, 4);
+    allocateSimpleConstructor("mat4x2"_s, &TypeStore::matrixType, 4, 2);
+    allocateSimpleConstructor("mat4x3"_s, &TypeStore::matrixType, 4, 3);
+    allocateSimpleConstructor("mat4x4"_s, &TypeStore::matrixType, 4, 4);
+
+    allocateSimpleConstructor("texture_1d"_s, &TypeStore::textureType, Types::Texture::Kind::Texture1d);
+    allocateSimpleConstructor("texture_2d"_s, &TypeStore::textureType, Types::Texture::Kind::Texture2d);
+    allocateSimpleConstructor("texture_2d_array"_s, &TypeStore::textureType, Types::Texture::Kind::Texture2dArray);
+    allocateSimpleConstructor("texture_3d"_s, &TypeStore::textureType, Types::Texture::Kind::Texture3d);
+    allocateSimpleConstructor("texture_cube"_s, &TypeStore::textureType, Types::Texture::Kind::TextureCube);
+    allocateSimpleConstructor("texture_cube_array"_s, &TypeStore::textureType, Types::Texture::Kind::TextureCubeArray);
+    allocateSimpleConstructor("texture_multisampled_2d"_s, &TypeStore::textureType, Types::Texture::Kind::TextureMultisampled2d);
+    allocateSimpleConstructor("texture_storage_1d"_s, &TypeStore::textureType, Types::Texture::Kind::TextureStorage1d);
+    allocateSimpleConstructor("texture_storage_2d"_s, &TypeStore::textureType, Types::Texture::Kind::TextureStorage2d);
+    allocateSimpleConstructor("texture_storage_2d_array"_s, &TypeStore::textureType, Types::Texture::Kind::TextureStorage2dArray);
+    allocateSimpleConstructor("texture_storage_3d"_s, &TypeStore::textureType, Types::Texture::Kind::TextureStorage3d);
 
     // This file contains the declarations generated from `TypeDeclarations.rb`
 #include "TypeDeclarations.h" // NOLINT
@@ -586,7 +615,7 @@ void TypeChecker::visit(AST::CallExpression& call)
                 return downcast<AST::NamedTypeName>(target).name();
             auto& parameterizedType = downcast<AST::ParameterizedTypeName>(target);
             typeArguments.append(resolve(parameterizedType.elementType()));
-            return AST::ParameterizedTypeName::baseToString(parameterizedType.base());
+            return parameterizedType.base();
         }();
 
         auto* targetBinding = isNamedType ? readVariable(targetName) : nullptr;
@@ -804,29 +833,42 @@ void TypeChecker::visit(AST::ArrayTypeName& array)
     inferred(m_types.arrayType(elementType, size));
 }
 
-void TypeChecker::visit(AST::NamedTypeName& namedType)
+const Type* TypeChecker::lookupType(const AST::Identifier& name)
 {
-    auto* binding = readVariable(namedType.name());
+    auto* binding = readVariable(name);
     if (!binding) {
-        typeError(namedType.span(), "unresolved type '", namedType.name(), "'");
-        return;
+        typeError(InferBottom::No, name.span(), "unresolved type '", name, "'");
+        return m_types.bottomType();
     }
 
     if (binding->kind != Binding::Type) {
-        typeError(namedType.span(), "cannot use value '", namedType.name(), "' as type");
-        return;
+        typeError(InferBottom::No, name.span(), "cannot use value '", name, "' as type");
+        return m_types.bottomType();
     }
 
-    inferred(binding->type);
+    return binding->type;
+}
+
+void TypeChecker::visit(AST::NamedTypeName& namedType)
+{
+    inferred(lookupType(namedType.name()));
 }
 
 void TypeChecker::visit(AST::ParameterizedTypeName& type)
 {
-    auto* elementType = resolve(type.elementType());
-    if (isBottom(elementType))
+    auto* base = lookupType(type.base());
+    if (isBottom(base)) {
         inferred(m_types.bottomType());
-    else
-        inferred(m_types.constructType(type.base(), elementType));
+        return;
+    }
+
+    auto* constructor = std::get_if<Types::TypeConstructor>(base);
+    if (!constructor) {
+        typeError(type.span(), "type '", *base, "' does not take template arguments");
+        return;
+    }
+
+    inferred(constructor->construct(type));
 }
 
 void TypeChecker::visit(AST::ReferenceTypeName&)
@@ -899,25 +941,19 @@ const Type* TypeChecker::vectorFieldAccess(const Types::Vector& vector, AST::Fie
         return nullptr;
     }
 
-    AST::ParameterizedTypeName::Base base;
     switch (length) {
     case 1:
         return vector.element;
     case 2:
-        base = AST::ParameterizedTypeName::Base::Vec2;
-        break;
     case 3:
-        base = AST::ParameterizedTypeName::Base::Vec3;
-        break;
     case 4:
-        base = AST::ParameterizedTypeName::Base::Vec4;
         break;
     default:
         typeError(access.span(), "invalid vector swizzle size");
         return nullptr;
     }
 
-    return m_types.constructType(base, vector.element);
+    return m_types.vectorType(vector.element, length);
 }
 
 template<typename CallArguments>
@@ -1068,6 +1104,21 @@ void TypeChecker::typeError(InferBottom inferBottom, const SourceSpan& span, Arg
 std::optional<FailedCheck> typeCheck(ShaderModule& shaderModule)
 {
     return TypeChecker(shaderModule).check();
+}
+
+template<typename TargetConstructor, typename... Arguments>
+void TypeChecker::allocateSimpleConstructor(ASCIILiteral name, TargetConstructor constructor, Arguments&&... arguments)
+{
+    introduceType(AST::Identifier::make(name), m_types.typeConstructorType(
+        name,
+        [this, constructor, arguments...](AST::ParameterizedTypeName& type) -> const Type* {
+            auto* elementType = resolve(type.elementType());
+            if (isBottom(elementType))
+                return m_types.bottomType();
+
+            return (m_types.*constructor)(elementType, arguments...);
+        }
+    ));
 }
 
 } // namespace WGSL
